[project]
name = "latent-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.3.0",
  "chromadb>=0.6.2",
  "einops>=0.8.0",
  "fastapi>=0.115.6",
  "open-clip-torch>=2.30.0",
  "torch>=2.5.1",
  "tqdm>=4.67.1",
  "transformers>=4.48.0",
]
